--- a/index.html
+++ b/index.html
@@ -454,6 +454,99 @@
       </div>
           </div>
        </section>
+       <section class="mt-10 lg:mt-20">
+        <div class="text-center">
+          <h1 class="text-5xl font-extrabold mb-5">Why Choose Us</h1>
+          <p class="text-gray-400 mb-10">Contrary to popular belief, is not simply random text. It has roots in a piece of classical<br> Latin literature from 45 BC, making it over 2000 years old.</p>
+        </div>
+        <div class="mt-10 mb-5 justify-center flex md:hidden">
+          <img src="images/whychoose1.png" alt="">
+        </div>
+        <div class="grid md:flex justify-center items-center gap-5">
+          <div>
+            <div class="mb-5 grid md:flex justify-center items-center gap-5">
+              <div class="flex justify-center md:grid">
+                <i class="fa-solid fa-people-group bg-gray-200 rounded-full p-5"></i>
+              </div>
+              <div  class="text-center md:text-start">
+                <h2 class="text-2xl font-extrabold">Dedicated Team</h2>
+                <div class="flex justify-center md:justify-start">
+                <div class="mt-5 border-[1px] w-[120px] border-black"></div>
+              </div>
+                <h2 class="text-gray-400 mt-5">Professional employees are there for you to pick the most amazing and fresh fruits.</h2>
+              </div>
+            </div>
+            <div  class="mb-5 grid md:flex justify-center items-center gap-5">
+              <div class="flex justify-center md:grid">
+                <i class="fa-sharp fa-solid fa-heart bg-gray-200 rounded-full p-5"></i>
+              </div>
+              <div class="text-center md:text-start">
+                <h2 class="text-2xl font-extrabold">Fresh is Best</h2>
+                <div class="flex justify-center md:justify-start">
+                  <div class="mt-5 border-[1px] w-[120px] border-black"></div>
+                </div>
+                <h2 class="text-gray-400 mt-5">Professional employees are there for you to pick the most amazing and fresh fruits.</h2>
+              </div>
+            </div>
+            <div  class="mb-5 grid md:flex justify-center items-center gap-5">
+              <div class="flex justify-center md:grid">
+                <i class="fa-solid fa-gift bg-gray-200 rounded-full p-5"></i>
+              </div>
+              <div class="text-center md:text-start">
+                <h2 class="text-2xl font-extrabold">Gift Certificates</h2>
+                <div class="flex justify-center md:justify-start">
+                  <div class="mt-5 border-[1px] w-[120px] border-black"></div>
+                </div>
+                <h2 class="text-gray-400 mt-5">Professional employees are there for you to pick the most amazing and fresh fruits.</h2>
+              </div>
+            </div>
+          </div>
+          <div class="hidden lg:flex">
+            <img src="images/whychoose1.png" alt="">
+          </div>
+          <div>
+            <div  class="mb-5 grid md:flex flex-row-reverse justify-center items-center gap-5">
+              <div class="flex justify-center md:grid">
+                <i class="fa-solid fa-truck-field bg-gray-200 rounded-full p-5"></i>
+              </div>
+              <div class="text-center md:text-end">
+                <h2 class="text-2xl font-extrabold">Integrated Supplier</h2>
+                <div class="flex justify-center md:justify-end">
+                  <div class="mt-5 border-[1px] w-[120px] border-black"></div>
+                </div>
+                <h2 class="text-gray-400 mt-5">Professional employees are there for you to pick the most amazing and fresh fruits.</h2>
+              </div>
+            </div>
+            <div  class="mb-5 grid md:flex flex-row-reverse justify-center items-center gap-5">
+              <div class="flex justify-center md:grid">
+                <i class="fa-solid fa-ice-cream bg-gray-200 rounded-full p-5"></i>
+              </div>
+              <div class="text-center md:text-end">
+                <h2 class="text-2xl font-extrabold">Sustainable Practice</h2>
+                <div class="flex justify-center md:justify-end">
+                  <div class="mt-5 border-[1px] w-[120px] border-black"></div>
+                </div>
+                <h2 class="text-gray-400 mt-5">Professional employees are there for you to pick the most amazing and fresh fruits.</h2>
+              </div>
+            </div>
+            <div  class="mb-5 grid md:flex flex-row-reverse justify-center items-center gap-5">
+              <div class="flex justify-center md:grid">
+                <i class="fa-solid fa-thumbs-up bg-gray-200 rounded-full p-5"></i>
+              </div>
+              <div class="text-center md:text-end">
+                <h2 class="text-2xl font-extrabold">The Benefits Only</h2>
+                <div class="flex justify-center md:justify-end">
+                  <div class="mt-5 border-[1px] w-[120px] border-black"></div>
+                </div>
+                <h2 class="text-gray-400 mt-5">Professional employees are there for you to pick the most amazing and fresh fruits.</h2>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="mt-10 hidden md:flex lg:hidden justify-center">
+          <img src="images/whychoose1.png" alt="">
+        </div>
+       </section>
     </main>
 </body>
 </html>
