--- a/index.html
+++ b/index.html
@@ -548,5 +548,29 @@
         </div>
        </section>
     </main>
+    <footer class="mt-20 footer footer-center p-10 bg-black text-white rounded">
+      <div class="flex justify-center">
+        <img src="images/logo.png" alt="">
+        <h2 class="text-4xl font-extrabold">Fruit Burst</h2>
+      </div>
+      <div class="flex justify-center items-center flex-wrap gap-x-10 md:gap-x-16 gap-y-5">
+        <a class="link link-hover">Home</a> 
+        <a class="link link-hover">About us</a> 
+        <a class="link link-hover">Shop</a> 
+        <a class="link link-hover">All Fruits</a> 
+        <a class="link link-hover">Support</a>
+        <a class="link link-hover">My Account</a> 
+      </div> 
+      <div>
+        <div class="flex justify-center flex-wrap gap-4">
+         <button class="btn border-black bg-black text-3xl"><i class="fa-brands fa-facebook-f" style="color: #ffffff;"></i></button>
+         <button class="btn border-black bg-black text-3xl"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></button>
+         <button class="btn border-black bg-black text-3xl"><i class="fa-brands fa-twitter" style="color: #fcfcfd;"></i></button>
+         <button class="btn border-black bg-black text-3xl"><i class="fa-brands fa-youtube" style="color: #d90808;"></i></button>
+         <button class="btn border-black bg-black text-3xl"><i class="fa-brands fa-apple" style="color: #ffffff;"></i></i></button>
+         <button class="btn border-black bg-black text-3xl"><i class="fa-brands fa-linkedin-in" style="color: #ffffff;"></i></button>
+        </div>
+      </div> 
+    </footer>
 </body>
 </html>
