--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
               <a class="btn btn-ghost normal-case text-xl">Fruit Burst</a>
             </div>
             <div class="navbar-end">
-                <div class="form-control">
-                    <input type="text" placeholder="Search" class="input input-bordered border-0 w-24 md:w-auto rounded-[60px] hidden lg:block"/>  
+                <div class="bg-white rounded-[60px] items-center hidden lg:flex">
+                    <input type="text" placeholder="Search" class="input input-bordered border-0 w-24
+                    rounded-l-[60px] md:w-auto text-black"/>  
+                    <i class="fa-solid fa-magnifying-glass text-black px-3 text-2xl border-l"></i>
                 </div>
                     <div class="dropdown dropdown-left">
                         <label tabindex="0" class="btn btn-ghost lg:hidden">
@@ -44,6 +46,10 @@
                             <li><a>About Us</a></li>
                             <li><a>Shop</a></li>
                             <li><a>All Fruits</a></li>
+                            <li class="bg-white rounded-[60px] flex items-center w-full">
+                              <input type="text" placeholder="Search" class="input input-bordered border-0 w-10
+                              rounded-l-[60px] hidden lg:block text-black"/>  
+                              <i class="fa-solid fa-magnifying-glass text-black px-3 text-2xl border-l"></i></li>
                         </ul>
                       </div>              
             </div>
@@ -242,17 +248,17 @@
               <div class="mt-5 border-[1px] w-[244px]"></div>
               <p class="mt-5 text-[#121212]">Apple</p>
               <div class="mt-5 rating rating-lg rating-half">
-                <input type="radio" name="rating-10" class="rating-hidden" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" checked />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-11" class="rating-hidden" />
+                <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-1" checked />
+                <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-2" />
               </div>
               <div class="mt-5 card-actions">
                 <!-- Open the modal using ID.showModal() method -->
@@ -265,17 +271,17 @@
     <h3 class="font-extrabold text-4xl">Apple</h3>
     <p class="py-4 font-meduim text-[#121212]">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
     <div class="mt-4 rating rating-lg rating-half">
-      <input type="radio" name="rating-10" class="rating-hidden" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" checked />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+      <input type="radio" name="rating-11" class="rating-hidden" />
+      <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+      <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+      <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-1" checked />
+      <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+      <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+      <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+      <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+      <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+      <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+      <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-2" />
     </div>
     <div class="modal-action flex justify-center gap-5">
       <!-- if there is a button in form, it will close the modal -->
