--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
                             <li><a>About Us</a></li>
                             <li><a>Shop</a></li>
                             <li><a>All Fruits</a></li>
-                            <li class="bg-white rounded-[60px] flex items-center w-full">
-                              <input type="text" placeholder="Search" class="input input-bordered border-0 w-10
-                              rounded-l-[60px] hidden lg:block text-black"/>  
-                              <i class="fa-solid fa-magnifying-glass text-black px-3 text-2xl border-l"></i></li>
+                            <li>
+                              <div class="bg-white rounded-[60px] flex flex-row items-center"><input type="text" placeholder="Search" class="input input-bordered border-0 w-16
+                                rounded-l-[60px] text-black"/>  
+                                <i class="fa-solid fa-magnifying-glass text-black px-3 text-2xl border-l"></i></div>
+                              </li>
                         </ul>
                       </div>              
             </div>
